new hampshire font, changed title.

--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 # Built with Jekyll 3.2.0
 
 # Setup
-title:               Dêmos
-tagline:             'Expanding the Public Domain.'
-description:         'A Public Domain Resource.'
+title:               Unclosure.
+tagline:             'An Act for the Encouragement of Learning.'
+description:         'Public Domain Resources.'
 url:                 'http://scholarslab.github.io'
 baseurl:             '/demos'
 
