--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Built with Jekyll 3.2.0
 
 # Setup
-title:               Unclosure.
+title:               Unclosure
 tagline:             'An Act for the Encouragement of Learning.'
 description:         'Public Domain Resources.'
 url:                 'http://scholarslab.github.io'
